--- a/PyTorch_Zero_to_Hero/PyTorch Experiment.ipynb
+++ b/PyTorch_Zero_to_Hero/PyTorch Experiment.ipynb
@@ -34,7 +34,18 @@
    "execution_count": 2,
    "id": "bc7ea08c-fe29-4871-bd5f-23d8b8187474",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jd/miniconda3/envs/eva/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/jd/miniconda3/envs/eva/lib/python3.10/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: /home/jd/miniconda3/envs/eva/lib/python3.10/site-packages/torchvision/image.so: undefined symbol: _ZN5torch3jit17parseSchemaOrNameERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEE\n",
+      "  warn(f\"Failed to load image Python extension: {e}\")\n"
+     ]
+    }
+   ],
    "source": [
     "import torch \n",
     "import  torch.nn as nn\n",
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "37887635-fbbd-4cd2-b8e4-cbf9dcf62840",
    "metadata": {},
    "outputs": [
@@ -73,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Dec 28 15:14:22 2022       \n",
+      "Tue Jan  3 21:43:00 2023       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 525.60.11    Driver Version: 525.60.11    CUDA Version: 12.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -82,7 +93,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  NVIDIA GeForce ...  Off  | 00000000:01:00.0  On |                  N/A |\n",
-      "| N/A   59C    P5    20W /  N/A |     77MiB / 16384MiB |     21%      Default |\n",
+      "| N/A   57C    P5    22W /  N/A |     77MiB / 16384MiB |     21%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -91,7 +102,7 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A      2236      G   /usr/lib/xorg/Xorg                 73MiB |\n",
+      "|    0   N/A  N/A      2257      G   /usr/lib/xorg/Xorg                 73MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "34bd64b2-89f4-4378-bfaf-35fd8a1b72d3",
    "metadata": {},
    "outputs": [],
@@ -112,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4f0cebb7-64ad-4dd2-aee6-0aad9092fa73",
    "metadata": {},
    "outputs": [],
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "36c33e95-f4ca-4cb4-944e-d4e2562e8675",
    "metadata": {},
    "outputs": [
@@ -134,7 +145,7 @@
        "array(1.3)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -144,7 +155,7 @@
        "array([1., 2., 3., 4.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -155,7 +166,7 @@
        "       [3., 4.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -180,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "fb51711c-4788-42b1-9a79-696dc37614cf",
    "metadata": {},
    "outputs": [
@@ -190,7 +201,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "dc89f909-1a97-47ea-894d-77abff910951",
    "metadata": {},
    "outputs": [],
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "27ae7ef2-7e9b-4f20-a136-8b3aec2f565f",
    "metadata": {},
    "outputs": [
@@ -233,7 +244,7 @@
        "tensor([1., 2., 3.])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -243,7 +254,7 @@
        "torch.Tensor"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -253,7 +264,7 @@
        "torch.float32"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "7e0a7515-b4b3-4bde-bcf9-3091dccc4493",
    "metadata": {},
    "outputs": [
@@ -276,7 +287,7 @@
        "tensor([1., 2., 3.], device='cuda:0')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -286,7 +297,7 @@
        "tensor([1., 2., 3.])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "fed96b3f-e126-4e64-b27b-b9b9ac1d105b",
    "metadata": {},
    "outputs": [
@@ -316,7 +327,7 @@
        "tensor([1, 2, 3])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "6eb0bd72-e6e6-462c-bb0b-5f418ffacfd7",
    "metadata": {},
    "outputs": [
@@ -344,7 +355,7 @@
        "tensor([1, 2, 3])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,7 +365,7 @@
        "torch.Tensor"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -364,7 +375,7 @@
        "torch.int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "8a4d68c5-8beb-4cdf-a911-777ae9d00749",
    "metadata": {},
    "outputs": [],
@@ -1445,8 +1456,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7677927e-5ad2-4d69-be9c-e1767a9de3b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140009157984912\n",
+      "140009157985360\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 14\n",
+    "print(id(x))\n",
+    "x *= 2\n",
+    "print(id(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f41eef46-3db6-4a83-ab9e-abce595dbd62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x =torch.randn(5, 5) #requires_grad = False by defaults\n",
+    "y =torch.randn(5, 5) #requires_grad = False by defaults\n",
+    "z =torch.randn((5, 5), requires_grad=True)\n",
+    "a = x + y\n",
+    "b = a + z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d5b77a91-ab2a-4f61-b6ec-12bf8ba5319a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.7149,  0.4922, -1.1130,  0.2214, -1.2168],\n",
+       "        [ 2.4099, -0.2742,  0.6978, -2.5068,  0.9656],\n",
+       "        [-0.1610,  1.0012, -1.0240, -0.9205,  1.9069],\n",
+       "        [-0.1183,  0.9686,  1.0606, -2.2964, -0.0194],\n",
+       "        [-0.8477, -0.0090, -0.0372,  0.4878,  0.1904]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1893, -0.6730,  0.4412,  0.0339,  0.3826],\n",
+       "        [ 0.5312, -0.3941, -0.7765, -0.9001,  0.8739],\n",
+       "        [ 1.2277,  0.7379,  1.6056,  0.0404, -0.8487],\n",
+       "        [ 0.4925,  1.7820, -0.7961,  0.3419,  1.3758],\n",
+       "        [-0.5410, -0.8102, -0.4628, -0.1787,  0.5178]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.2246,  0.5072, -0.5077, -1.1419, -0.1428],\n",
+       "        [-0.2880, -0.2522, -0.2616,  0.9309, -1.5424],\n",
+       "        [-0.2203, -0.9931,  0.8916,  1.1524,  0.5883],\n",
+       "        [ 1.1000,  0.5042,  1.1678,  0.1545, -0.9380],\n",
+       "        [-1.6276,  0.2280, -1.5412, -0.0103,  0.1686]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.9395,  0.9993, -1.6207, -0.9205, -1.3596],\n",
+       "        [ 2.1219, -0.5264,  0.4362, -1.5759, -0.5768],\n",
+       "        [-0.3813,  0.0081, -0.1325,  0.2319,  2.4952],\n",
+       "        [ 0.9817,  1.4729,  2.2284, -2.1420, -0.9574],\n",
+       "        [-2.4754,  0.2189, -1.5784,  0.4775,  0.3589]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.7502,  0.3263, -1.1795, -0.8866, -0.9771],\n",
+       "        [ 2.6532, -0.9204, -0.3403, -2.4760,  0.2971],\n",
+       "        [ 0.8464,  0.7460,  1.4731,  0.2722,  1.6465],\n",
+       "        [ 1.4743,  3.2549,  1.4323, -1.8001,  0.4183],\n",
+       "        [-3.0164, -0.5913, -2.0412,  0.2988,  0.8767]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x\n",
+    "z\n",
+    "y\n",
+    "a\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "81168069-6840-41c0-b0e9-308b6171932b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mList(myList):\n",
+    "    result = 1\n",
+    "    for x in myList:\n",
+    "        result = result * x\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fae42a69-ba08-4e19-8995-721f4592af3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "l1= [1, 2160]\n",
+    "\n",
+    "l2 = [8, 270]\n",
+    "\n",
+    "l3 = [3, 12, 12, 4]\n",
+    "\n",
+    "l4 = [16, [27, 5]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e02e5ec0-6c92-40cb-b402-3b113a310529",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2160"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2160"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1728"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mList(l1)\n",
+    "mList(l2)\n",
+    "mList(l3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ebcadf3b-1e7a-4cd4-acbf-f42281718bf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2160"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "27*5*16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "01ae9e23-e613-4d23-8633-bc94bea4715c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(12)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor([3, 12, 12, 4]).max()\n",
+    "torch.tensor([3, 12, 12, 4]).argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "5e31427d-139d-4e8b-9960-10a26439e173",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.max(\n",
+       "values=tensor([2., 3., 5.]),\n",
+       "indices=tensor([3, 1, 3]))"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = torch.tensor([[1, 0, 0, 2], [0, 3, 3, 0],[4, 0, 0, 5]], dtype=torch.float32)\n",
+    "t.max(dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4ae2f79-094f-489e-a7fb-1e051c09331e",
    "metadata": {},
    "outputs": [],
    "source": []
