--- a/Coding Drill Down/Try_5.ipynb
+++ b/Coding Drill Down/Try_5.ipynb
@@ -2505,6 +2505,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rf_calc import receptive_field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=======================================Reciptive Field Calculator========================================\n",
+      "|    | Kernel_size   | Padding   |   Stride | Input_Img_size   | Output_Img_size   | Receptive_field   |\n",
+      "|---:|:--------------|:----------|---------:|:-----------------|:------------------|:------------------|\n",
+      "|  0 | 3*3           | NO        |        1 | 28*28            | 26*26             | 3*3               |\n",
+      "|  1 | 3*3           | NO        |        1 | 26*26            | 24*24             | 5*5               |\n",
+      "|  2 | 3*3           | NO        |        1 | 24*24            | 22*22             | 7*7               |\n",
+      "|  3 | 2*2           | NO        |        2 | 22*22            | 11*11             | 8*8               |\n",
+      "|  4 | 1*1           | NO        |        1 | 11*11            | 11*11             | 8*8               |\n",
+      "|  5 | 3*3           | NO        |        1 | 11*11            | 9*9               | 12*12             |\n",
+      "|  6 | 3*3           | NO        |        1 | 9*9              | 7*7               | 16*16             |\n",
+      "|  7 | 3*3           | NO        |        1 | 7*7              | 5*5               | 20*20             |\n",
+      "|  8 | 5*5           | NO        |        1 | 5*5              | 1*1               | 28*28             |\n",
+      "=========================================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = receptive_field(model,28)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "colab": {},
